# font-feature-tester

./: .ruff.toml  Cargo.toml  README.md  generate-all.py
resources/configs/: CommitMono.toml  Geist.toml  IBMPlexMono.toml  Inconsolata.toml  IntelOneMono.toml  JetBrainsMono.toml  OverpassMono.toml  SourceCodePro.toml
resources/fonts/: CommitMono-license.txt  OverpassMono-license.txt
resources/texts/: README.md  commitmonotests.txt  default.txt  html.txt  php.txt  ruby.txt  rust.txt  typescript.txt
src/: colors.rs  constants.rs  hb.rs  lib.rs  main-old.rs  main-working.rs  main.rs
